[gd_scene load_steps=7 format=3 uid="uid://ddtahjh2loica"]

[ext_resource type="FontFile" uid="uid://dqebeph0ojul7" path="res://art/brackeys_platformer_assets/fonts/PixelOperator8.ttf" id="1_crg1u"]
[ext_resource type="Script" path="res://scripts/affirmation.gd" id="1_j34ra"]
[ext_resource type="FontFile" uid="uid://7lseluimqeje" path="res://data/new_font_file.tres" id="2_wggfq"]
[ext_resource type="FontFile" uid="uid://rumvk3huqa2f" path="res://art/brackeys_platformer_assets/fonts/PixelOperator8-Bold.ttf" id="3_vgjql"]
[ext_resource type="Texture2D" uid="uid://dlmeda0gkx4fj" path="res://art/Base Character - Free/idle.png" id="4_d0otl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_j30wl"]
atlas = ExtResource("4_d0otl")
region = Rect2(32, 192, 16, 16)

[node name="Affirmation" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j34ra")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.012
offset_bottom = 0.223938
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="Panel"]
modulate = Color(0, 1, 1, 0.270588)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.021
anchor_top = 0.318
anchor_right = 0.237
anchor_bottom = 0.355
offset_left = -0.192007
offset_top = 0.169617
offset_right = -0.0240173
offset_bottom = -0.102371
theme_override_fonts/font = ExtResource("1_crg1u")
theme_override_font_sizes/font_size = 24
text = "Affirmation 1"
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.021
anchor_top = 0.54
anchor_right = 0.237
anchor_bottom = 0.576
offset_left = -0.192007
offset_top = -0.277313
offset_right = -0.0236511
offset_bottom = 0.304657
theme_override_fonts/font = ExtResource("2_wggfq")
theme_override_font_sizes/font_size = 24
text = "Affirmation 2"
metadata/_edit_use_anchors_ = true

[node name="Label3" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.021
anchor_top = 0.773
anchor_right = 0.236
anchor_bottom = 0.805
offset_left = -0.192007
offset_top = 0.158722
offset_right = 1.12836
offset_bottom = 3.36469
theme_override_fonts/font = ExtResource("1_crg1u")
theme_override_font_sizes/font_size = 24
text = "Affirmation 3"
metadata/_edit_use_anchors_ = true

[node name="affirmation_1" type="LineEdit" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.021
anchor_top = 0.367
anchor_right = 0.5
anchor_bottom = 0.503
offset_left = -0.192007
offset_top = 0.321854
offset_right = -0.000366211
offset_bottom = -0.190369
theme_override_fonts/font = ExtResource("2_wggfq")
theme_override_font_sizes/font_size = 16
metadata/_edit_use_anchors_ = true

[node name="affirmation_2" type="LineEdit" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.021
anchor_top = 0.589
anchor_right = 0.5
anchor_bottom = 0.724
offset_left = -0.192007
offset_top = -0.125061
offset_right = -0.000366211
offset_bottom = 0.0186768
theme_override_fonts/font = ExtResource("2_wggfq")
theme_override_font_sizes/font_size = 16
metadata/_edit_use_anchors_ = true

[node name="affirmation_3" type="LineEdit" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.021
anchor_top = 0.822
anchor_right = 0.5
anchor_bottom = 0.958
offset_left = -0.192007
offset_top = 0.311096
offset_right = -0.000366211
offset_bottom = -0.201233
theme_override_fonts/font = ExtResource("2_wggfq")
theme_override_font_sizes/font_size = 16
metadata/_edit_use_anchors_ = true

[node name="title" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.049
anchor_top = 0.105
anchor_right = 0.95
anchor_bottom = 0.178
offset_left = -0.448006
offset_top = -0.238037
offset_right = -0.399902
offset_bottom = 0.18251
theme_override_fonts/font = ExtResource("3_vgjql")
theme_override_font_sizes/font_size = 48
text = "Enter Daily Affrimations"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.549
anchor_top = 0.232
anchor_right = 0.91
anchor_bottom = 0.829
offset_left = -0.447998
offset_top = -0.192001
offset_right = -0.320068
offset_bottom = 0.175964
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_j30wl")

[node name="submit" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.638889
anchor_top = 0.829268
anchor_right = 0.840278
anchor_bottom = 0.951219
focus_neighbor_left = NodePath("../affirmation_3")
focus_neighbor_top = NodePath("../TextureRect")
theme_override_fonts/font = ExtResource("3_vgjql")
theme_override_font_sizes/font_size = 24
text = "Submit"
metadata/_edit_use_anchors_ = true

[node name="display_points" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 24.0
offset_top = 136.0
offset_right = 248.0
offset_bottom = 192.0
theme_override_fonts/font = ExtResource("3_vgjql")
theme_override_font_sizes/font_size = 8

[connection signal="pressed" from="Panel/submit" to="." method="_on_submit_pressed"]
